samples/_failures_safe/1761494398_934dec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1bda6955.c: In function ‘main’:
./samples/SAFE/__tmp_1bda6955.c:168:25: error: missing terminating " character
  168 |         fprintf(stderr, "Failed to create token list
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1bda6955.c:168:9: error: expected expression at end of input
  168 |         fprintf(stderr, "Failed to create token list
      |         ^~~~~~~
./samples/SAFE/__tmp_1bda6955.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1bda6955.c:168:9: error: expected declaration or statement at end of input
